Added CSS and a student bio for class

--- a/MyBio.html
+++ b/MyBio.html
@@ -1,22 +1,51 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <link style.css >
+
+<head>
+    <link rel="stylesheet" type="text/css" href="css/style.css">
     <title>Student Bio</title>
-    </head>
-    <body>
-        <!-- Main info -->
+</head>
+
+<body>
+    <!-- Main info -->
+    <div class="container" id="main-bio">
         <h1>Student Bio</h1>
         <h2>Darren Watson</h2>
-        <img src="">
-        <p>
 
-        </p>
-        <!-- Contact info -->
+        <div class="container" id="bio-image">
+            <p>
+                <img src="https://avatars.githubusercontent.com/u/74877923?s=460&u=ba437e2ffced95c710f726a23b0e0c45e93319ac&v=4"
+                    alt="picture of Darren">
+            </p>
+        </div>
+        <br>
+        <div id="main-text">
+            <h3>About Me</h3>
+            <p>
+                I started working at 16 years old with my brother helping him ouit on the job. We installed self serve
+                drink machines like you see at
+                most fast food restaruants. I found myself more interested in cars at the time so I dedcided that was
+                what I wanted to do so once I graduated
+                from high school I took classes at Eastfield community college to become an automotive technician.
+                Unfortunatly during second semester I
+                got evicted and my car motor blew around same time. So I had to pull out of class and I spent several
+                years trying to get back into school
+                this time for engineering. This led me to computer programming and coding. Which for me was like a
+                breath of fresh air since I've done nothing
+                but manual labor jobs through my work career and I really loved it so i took a boot camp to get into the
+                industry ASAP. I do plan on finshing
+                a bachelor degree associated to this field not because I need to just because I enjoy learning.
+            </p>
+        </div>
+    </div>
+    <!-- Contact info -->
+    <div class="container" id="contact-info">
         <ol>
-            <li><strong>Email:</strong></li>
-            <li><strong>Github:</strong></li>
-            <li><strong>Portfolio:</strong></li>
+            <li><strong>Email:<a href="mailto: v_tec@live.com">Send a message</a></strong></li>
+            <li><strong>Github:<a href="https://github.com/dangerousd214" target="_blank">Projects</a></strong></li>
+            <li><strong>Portfolio:<a href="">Check back later</a></strong></li>
         </ol>
-    </body>
+    </div>
+</body>
+
 </html>
